# remote-coding

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.claude/backups/: 2026-05-15-telegram-tool-message-design.md  2026-05-23-memory-ttl-limits-design.md  2026-05-23-memory-ttl-limits.md  2026-05-26-priority-fixes-design.md  2026-05-26-priority-fixes.md  2026-05-30-local-ci-pre-push-design.md
.claude/skills/: superpowers-refactoring.md
.claude/workflows/: code-review-ultracode.js  fix-all-improvements.js  refactor-phase2.js  refactor-ultracode.js  review-fix-3rounds.js
.github/workflows/: ci.yml  quality.yml  release.yml
app/: bootstrap.py  bootstrap_base.py  bootstrap_mixins.py  main.py
app/bot/: commands.py  router.py  session_list_renderer.py
app/config/: loader.py  settings.py
app/domain/: external_session_models.py  file_models.py  hook_models.py  models.py  permission_models.py  protocols.py  session_models.py  session_tombstone.py  transcript_models.py  user_question_models.py
app/infra/: async_utils.py  file_mtime_utils.py  gitignore_utils.py  lock_registry.py  logging.py  periodic_task.py  scan_filter.py  source_text_normalization.py  text_formatting.py  tmux_preflight.py  user_question_constants.py
app/services/: admin_password_service.py  agent_file_watcher.py  auto_approve_service.py  background_task_registry.py  claude_command_discovery.py  claude_jsonl_parser.py  context_builder.py  diff_generator.py  diff_image_generator.py  external_binding_cleanup_service.py  external_binding_cleanup_task.py  external_binding_reaper.py  external_binding_store.py  external_session_binder.py  external_session_discovery.py  external_session_push_notifier.py  external_user_question_state.py  file_receiver.py  file_sender.py  interrupt_watcher.py  janitor_task.py  jsonl_file_watcher.py  lock_registry.py  message_sender.py  periodic_janitor.py  permission_callback_registry.py  permission_gateway.py  permission_service.py  process_liveness.py  (+29 more)
docs/: architecture.md  middleware.md  module_call_diagram.md  quality.md  session-lifecycle-issues.md  testing.md
packaging/: VERIFICATION.md  tg-cli-gateway.rb
scripts/: __init__.py  quality_check.sh  release_check.py
tests/: conftest.py  test_agent_file_watcher.py  test_async_utils.py  test_auth_settings.py  test_auto_export_streamer.py  test_background_task_registry.py  test_bootstrap_hooks.py  test_bootstrap_mixins_pid.py  test_bot_commands_registration.py  test_bound_auto_approve_no_double_prompt.py  test_chunk_sender.py  test_ci_precommit_parity.py  test_claude_chat_flow.py  test_claude_command_discovery.py  test_claude_jsonl_parser.py  test_claude_stop_hook.py  test_claude_terminal_facade.py  test_cli_registry.py  test_command_claude.py  test_command_list.py  test_command_run.py  test_context_builder.py  test_diff_generator.py  test_diff_image_generator.py  test_error_handling_middleware.py  test_export_handler.py  test_external_binding_cleanup_exploration.py  test_external_binding_cleanup_service.py  test_external_binding_cleanup_service_liveness.py  test_external_binding_cleanup_startup.py  test_external_binding_preservation.py  test_external_binding_reaper.py  test_external_binding_store.py  test_external_binding_store_pid.py  test_external_session_binder_pid.py  test_external_session_discovery_liveness.py  test_external_session_models_pid.py  test_external_session_push_notifier.py  test_factory.py  test_file_mtime_utils.py  (+61 more)
(+145 files in other folders)
