[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-cli-gateway"
version = "0.1.0"
description = "Telegram 交互式远程 CLI 执行网关"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.1,<4",
  "pydantic-settings>=2.6.1,<3",
  "aiohttp-socks>=0.10.1,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
