[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-cli-gateway"
version = "0.1.2"
description = "Telegram 交互式远程 CLI 执行网关"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.1,<4",
  "pydantic-settings>=2.6.1,<3",
  "aiohttp-socks>=0.10.1,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<1",
  "hypothesis>=6.100,<7",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "pre-commit>=3.5,<5"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"app/bot/router.py" = ["E731"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
pretty = true
warn_unused_ignores = true
