[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-cli-gateway"
version = "1.0.1"
description = "Telegram 交互式远程 CLI 执行网关"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Jack" },
]
keywords = ["telegram", "cli", "gateway", "ai", "remote", "claude", "codex", "gemini"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "aiogram>=3.13.1,<4",
  "pydantic-settings>=2.6.1,<3",
  "aiohttp-socks>=0.10.1,<1"
]

[project.urls]
Homepage = "https://github.com/Jack261108/remote-coding"
Repository = "https://github.com/Jack261108/remote-coding"
Issues = "https://github.com/Jack261108/remote-coding/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "pytest-asyncio>=0.24.0,<1",
  "pytest-cov>=5.0,<6",
  "hypothesis>=6.100,<7",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "pre-commit>=3.5,<5"
]

[project.scripts]
tg-cli-gateway = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/bot/router.py" = ["E731"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
pretty = true
warn_unused_ignores = true
ignore_missing_imports = true
